--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(./vendor/normalize.css);
+@import url(./fonts/fonts-backend/fonts.css); 
+@import url(./components/App/App.css);
+@import url(./components/About/About.css);
+@import url(./components/Footer/Footer.css);
+@import url(./components/Header/Header.css);
+@import url(./components/Main/Main.css);
+@import url(./components/Navigation/Navigation.css);
+@import url(./components/NewsCard/NewsCard.css);
+@import url(./components/NewsCardList/NewsCardList.css);
+@import url(./components/PopupWithForm/PopupWithForm.css);
+@import url(./components/Preloader/preloader.css);
+@import url(./components/SavedNews/SavedNews.css);
+@import url(./components/SavedNewsHeader/SavedNewsHeader.css);
+@import url(./components/SearchForm/SearchForm.css);
