--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,3 +1,39 @@
-.Main {
-    
+.main {
+    position: relative;
+    color: #FFFFFF;
+}
+.main__background {
+    position: absolute;
+    left: 0;
+    top: -160px;
+    width: 100%;
+    max-height: 576px;
+    object-fit: cover;
+    z-index: -1;
+}
+.search {
+    margin: 80px auto 80px;
+    max-width: 608px;
+}
+.search__heading {
+    font-family: 'Roboto Slab', Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 60px;
+    line-height: 64px;
+    margin: 0;
+}
+.search__description {
+    font-family: 'Roboto', Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    max-width: 545px;
+    margin: 32px auto 0 0;
+}
+@media screen and (max-width: 1440px) {
+    .main__background {
+        height: 576px;
+    }
 }
