--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,3 +1,78 @@
-.Navigation {
-
+.navigation__logo {
+    font-family: 'Roboto Slab', Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    margin: 0 auto 0 0;
+    align-self: center;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+.navigation__logo_black {
+    color: #1A1B22;    
+}
+.navigation__link {
+    text-decoration: none;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color:#B6BCBF;
+    margin: 29px 34px 0 0;
+}
+.navigation__link_active-white {
+    box-shadow: inset 0px -3px 0px;
+    color: #FFFFFF;
+}
+.navigation__link:last-of-type {
+    margin-right: 0;
+}
+.navigation__link:hover {
+    color: #FFFFFF;
+}
+.navigation__link_black {
+    color: #D1D2D6;    
+}
+.navigation__link_black:hover {
+    color: #1A1B22;    
+}
+.navigation__link_active-black {
+    box-shadow: inset 0px -3px 0px;
+    color: #1A1B22;
+}
+.navigation__auth-container {
+    display: flex;
+    padding: 12px;
+    align-self: center;
+    margin: 0 0 0 34px;
+    border: 1px solid #B6BCBF;
+    cursor: pointer;
+    border-radius: 100px;
+}
+.navigation__auth-container:hover {
+    border: 1px solid #FFFFFF;    
+}
+.navigation__auth-container_black {
+    border: 1px solid #D1D2D6;
+}
+.navigation__auth-container_black:hover {
+    border: 1px solid #1A1B22;
+}
+.navigation__logout-button {
+    font-family: 'Roboto', Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin: 0;
+    align-self: center;
+}
+.navigation__logout-button_black {
+    color: #1A1B22;
+}
+.navigation__logout-icon {
+    margin: auto 0 auto 10px;
 }
