--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -1,3 +1,11 @@
-.SavedNews {
-    
+.saved-news {
+    display: flex;
+    justify-content: center;
+    background-color: #FFFFFF;
+    padding-top: 80px;
+    padding-bottom: 80px;
+
+}
+.saved-news__header {
+    margin: 0;
 }
