--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,3 +1,46 @@
-.SearchForm {
-    
+.search-form {
+    display: flex;
+    overflow: hidden;
+    font-family: 'Roboto', Arial, sans-serif;
+    min-height: 64px;
+    border-radius: 100px;
+    margin: 64px 0 0 0;
+    background: #FFFFFF;
+}
+.search-form__input {
+    border: 0;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1A1B22;
+    margin: 0 24px;
+    width: 100%;
+}
+.search-form__input::placeholder {
+    color: #B6BCBF;
+}
+.search-form__input:focus {
+    outline: none;
+}
+.search-form__search-button {
+    border: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    min-width: 168px;
+    color: #FFFFFF;
+    background-color: #2F71E5;
+    border-radius: 100px;
+}
+.search-form__search-button:hover {
+    background-color: #347EFF;
+    cursor: pointer;
+}
+.search-form__search-button:active {
+    background-color: #2A65CC;
+}
+.search-form__search-button:focus {
+    outline: none;    
 }
