--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,41 @@
-.Footer {
-    
+.footer {
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Roboto', Arial, sans-serif;
+    padding: 0 105px;
+    min-height: 80px;
+}
+.footer__copyright {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    color: #B6BCBF;
+    align-self: center;
+}
+.footer__navigation-container {
+    display: flex;
+    align-self: center;
+}
+.footer__links {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    color: #1A1B22;
+    margin-right: 30px;
+}
+.footer__links:hover {
+    color:#B6BCBF;
+}
+.footer__social-icons {
+    margin-left: 28px;
+}
+.footer__social-icons:hover {
+    opacity: .5;
+}
+.footer__social-icon {
+    width: 20px;
+    height: 20px;
 }
