--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,3 +1,131 @@
-.NewsCard {
-    
+.news-card__container {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+}
+.news-card__image {
+    min-width: 100%;
+    height: 272px;
+    object-fit: cover;
+}
+.news-card__button-container {
+    display: flex;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+}
+.news-card__button-container_main {
+}
+.news-card__button-container_main:hover .news-card__button-info-container {
+    display: flex;
+    font-size: 10px;
+    line-height: 12px;
+}
+.news-card__button-container_saved-news {
+}
+.news-card__button-container_saved-news:hover .news-card__button-info-container {
+    display: flex;
+    font-size: 12px;
+    line-height: 14px;
+}
+.news-card__button-info-container {
+    display: none;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    background-color: #FFFFFF;  
+    border-radius: 10px;
+    min-height: 40px;
+    margin-right: 5px;
+    color: #000000;
+}
+.news-card__button-info {  
+    margin: 0 12px;
+    align-self: center;
+}
+.news-card__button {
+    background-repeat: no-repeat;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    background-position: center;
+    border: none;
+    height: 40px;
+    width: 40px;
+}
+.news-card__button:hover {
+    cursor: pointer;
+}
+.news-card__button_add {
+    background-image: url(../../images/svg/add-button.svg);
+}
+.news-card__button_add:hover {
+    background-image: url(../../images/svg/add-button-black.svg);
+}
+.news-card__button_trash {
+    background-image: url(../../images/svg/trash-button.svg);
+}
+.news-card__button_trash:hover {
+    background-image: url(../../images/svg/trash-button-black.svg);
+}
+.news-card__keyword-container {
+    display: flex;
+    position: absolute;
+    background-color: #FFFFFF;  
+    border-radius: 10px;
+    left: 24px;
+    top: 24px; 
+    min-height: 40px;  
+}
+.news-card__keyword {
+    font-family: 'Roboto', Arial, sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    margin: 0 12px;
+    color: #000000;
+    align-self: center;
+}
+.news-card__info {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 24px 24px 24px;
+    color: #1A1B22;
+}
+.news-card__date {
+    margin: 0 auto 0 0;
+    font-family: 'Source Sans Pro', Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    color: #B6BCBF;
+}
+.news-card__heading {
+    font-family: 'Roboto Slab', Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 30px;
+    margin: 12px auto 0 0;
+}
+.news-card__description {
+    font-family: 'Roboto', Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    margin: 16px 0 0;
+}
+.news-card__sourse {
+    font-family: 'Roboto Slab', Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.4px;
+    text-transform: uppercase;
+    color: #B6BCBF;
+    margin: 18px auto 0 0;
 }
