--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -1,3 +1,42 @@
-.NewsCardList {
-    
+.news-card-list {
+    display: flex;
+    flex-direction: column;
+    background: #F5F6F7;
+    padding: 0 104px 0 104px;
+}
+.news-card-list__header {
+    font-family: 'Roboto Slab', Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 46px;
+    color: #1A1B22;
+    margin: 80px 0 0;
+}
+.news-card-list__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
+    grid-row-gap: 16px;
+    grid-column-gap: 16px;
+    margin: 64px 0 64px;
+}
+.news-card-list__show-button {
+    border: none;
+    background: #FFFFFF;
+    border-radius: 80px;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    min-width: 288px;
+    min-height: 64px;
+    margin: 0 auto 80px;
+    color: #1A1B22;
+    outline: none;
+}
+.news-card-list__show-button:hover {
+    cursor: pointer;
+    background: #E6E8EB;
 }
