--- a/src/components/Preloader/preloader.css
+++ b/src/components/Preloader/preloader.css
@@ -1,28 +1,34 @@
-body {
-	margin: 0;
-	min-height: 100vh;
-	background-color: #333;
-	
-	overflow: hidden;
+.preloader {
+	display: flex;
+	flex-direction: column;
+	margin: 80px auto;
 }
-
-.circle-preloader {
+.preloader__container {
+	position: relative;
+	align-self: center;
+	width: 74px;
+	height: 74px;
+}
+.preloader__circle-preloader {
 	display: block;
-	width: 50px;
-	height: 50px;
-	border: 4px solid #444;
+	border: 1px solid #444;
 	border-bottom-color: #888;
-	
 	border-radius: 50%;
-	
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	margin: auto;
-	
 	animation: spin .75s infinite linear;
+}
+.preloader__search-text {
+	font-family: 'Roboto', Arial, sans-serif;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 24px;
+	color: #B6BCBF;
+	margin: 24px 0 0;
 }
 
 @keyframes spin {
