--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,5 @@
 @import url(./components/SavedNews/SavedNews.css);
 @import url(./components/SavedNewsHeader/SavedNewsHeader.css);
 @import url(./components/SearchForm/SearchForm.css);
+@import url(./components/LoginPopup/LoginPopup.css);
+@import url(./components/RegisterPopup/RegisterPopup.css);
