--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -37,3 +37,31 @@
         height: 576px;
     }
 }
+@media screen and (max-width: 768px) {
+    .main__background {
+        top: -106px;
+        max-height: 400px;
+    }
+    .search {
+        max-width: 448px;
+        margin: 40px auto 48px;
+    }
+    .search__heading {
+        font-size: 36px;
+        line-height: 40px;
+        max-width: 385px;
+    }
+    .search__description {
+        margin: 16px auto 0 0;
+    }
+}
+@media screen and (max-width: 320px) {
+    .main__background {
+        top: -86px;
+        max-height: 538px;
+    }
+    .search {
+        max-width: 288px;
+        margin: 30px auto 32px;
+    }
+}
