--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,7 +1,7 @@
 .news-card__container {
     position: relative;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 20px;
     background-color: #FFFFFF;
 }
 .news-card__image {
@@ -90,7 +90,8 @@
 .news-card__info {
     display: flex;
     flex-direction: column;
-    margin: 20px 24px 24px 24px;
+    height: 230px;
+    margin: 20px 24px 0;
     color: #1A1B22;
 }
 .news-card__date {
@@ -109,6 +110,11 @@
     font-size: 26px;
     line-height: 30px;
     margin: 12px auto 0 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .news-card__description {
     font-family: 'Roboto', Arial, sans-serif;
@@ -117,6 +123,11 @@
     font-size: 16px;
     line-height: 22px;
     margin: 16px 0 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .news-card__sourse {
     font-family: 'Roboto Slab', Arial, sans-serif;
@@ -127,5 +138,80 @@
     letter-spacing: 0.4px;
     text-transform: uppercase;
     color: #B6BCBF;
-    margin: 18px auto 0 0;
+    margin: 10px 24px 24px;
+}
+@media screen and (max-width: 768px) {
+    .news-card__image {
+        height: 150px;        
+    }
+    .news-card__sourse {
+        margin: 12px 16px 16px;
+    }
+    .news-card__button-container {
+        top: 8px;
+        right: 8px;         
+    }
+    .news-card__button-container_main:hover .news-card__button-info-container {
+        font-size: 9px;
+        line-height: 11px;       
+    }
+    .news-card__button-container_saved-news:hover .news-card__button-info-container {
+        font-size: 13px;
+        line-height: 15px;       
+    }
+    .news-card__button-info-container {
+        margin-right: 3px;        
+    }
+    .news-card__keyword-container {
+        left: 8px;
+        top: 8px;         
+    }
+    .news-card__info {
+        margin: 16px 16px 0; 
+        height: 206px;   
+    }
+    .news-card__heading {
+        font-size: 21px;
+        line-height: 24px;       
+    }
+    .news-card__description {
+        margin: 10px 0 0;        
+    }
+}
+@media screen and (max-width: 320px) {
+    .news-card__image {
+        height: 196px;     
+    }
+    .news-card__button-container {
+        top: 16px;
+        right: 16px;       
+    }
+    .news-card__button-info-container {
+        margin-right: 5px;        
+    }
+    .news-card__button-container_main:hover .news-card__button-info-container {
+        font-size: 10px;
+        line-height: 12px;        
+    }
+    .news-card__button-container_saved-news:hover .news-card__button-info-container {
+        font-size: 9px;
+        line-height: 11px;         
+    }
+    .news-card__keyword-container {
+        left: 16px;
+        top: 16px;            
+    }
+    .news-card__info {
+        margin: 16px 16px 0; 
+        height: 184px; 
+    }
+    .news-card__heading {
+        margin: 10px auto 0 0;
+        -webkit-line-clamp: 2;
+        font-size: 22px;
+        line-height: 26px;       
+    }
+    .news-card__sourse {
+        margin: 8px 16px 16px;
+    }
 }
