--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background: #F5F6F7;
-    padding: 0 104px 0 104px;
+    padding: 0 104px 0;
 }
 .news-card-list__header {
     font-family: 'Roboto Slab', Arial, sans-serif;
@@ -19,7 +19,7 @@
     grid-template-rows: repeat(auto, 1fr);
     grid-row-gap: 16px;
     grid-column-gap: 16px;
-    margin: 64px 0 64px;
+    margin: 64px 0;
 }
 .news-card-list__show-button {
     border: none;
@@ -39,4 +39,41 @@
 .news-card-list__show-button:hover {
     cursor: pointer;
     background: #E6E8EB;
+}
+@media screen and (max-width: 768px) {
+    .news-card-list {
+        padding: 0 40px 0;
+    }
+    .news-card-list__header {
+        font-size: 30px;
+        line-height: 34px;
+        margin: 40px 0 0;
+    }
+    .news-card-list__container {
+        grid-row-gap: 8px;
+        grid-column-gap: 8px;
+        margin: 32px 0;    
+    }
+    .news-card-list__show-button {
+        min-width: 240px;
+        min-height: 56px;
+        margin: 0 auto 40px;       
+    }
+}
+@media screen and (max-width: 320px) {
+    .news-card-list {
+        padding: 0 16px 0;
+    }
+    .news-card-list__header {
+        margin: 32px 0 0;
+    }
+    .news-card-list__container {
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 10px;
+        margin: 24px 0 15px;  
+    }
+    .news-card-list__show-button {
+        min-width: 288px;
+        margin: 0 auto 32px;      
+    }
 }
