--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -1,11 +1,11 @@
-.saved-news-heder {
+.saved-news-header {
     font-family: 'Roboto', Arial, sans-serif;
     display: flex;
     flex-direction: column;
     padding: 40px 104px 56px;
     color: #1A1B22;
 }
-.saved-news-heder__heading {
+.saved-news-header__heading {
     margin: 0 auto 0 0;
     font-style: normal;
     font-weight: normal;
@@ -13,7 +13,7 @@
     line-height: 24px;
     color: rgba(26, 27, 34, 0.5);
 }
-.saved-news-heder__count {
+.saved-news-header__count {
     font-family: 'Roboto Slab', Arial, sans-serif;
     margin: 28px auto 0 0;
     max-width: 530px;
@@ -22,13 +22,45 @@
     font-size: 40px;
     line-height: 46px;
 }
-.saved-news-heder__keywords {
+.saved-news-header__keywords {
     margin: 30px auto 0 0;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 24px;
 }
-.saved-news-heder__keywords-bold {
+.saved-news-header__keywords-bold {
     font-weight: 700;
+}
+@media screen and (max-width: 768px) {
+    .saved-news-header {
+        padding: 24px 40px 32px;
+    }
+    .saved-news-header__heading {
+        font-size: 14px;
+    }
+    .saved-news-header__count {
+        font-size: 30px;
+        line-height: 34px;
+        max-width: 336px;
+        margin: 16px auto 0 0;
+    }
+    .saved-news-header__keywords {
+        margin: 16px auto 0 0;
+        font-size: 14px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .saved-news-header {
+        padding: 8px 16px 32px;
+    }
+    .saved-news-header__heading {
+        font-size: 12px;
+    }
+    .saved-news-header__count {
+        max-width: 288px;
+    }
+    .saved-news-header__keywords {
+        font-size: 18px;
+    }
 }
