--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -43,7 +43,23 @@
     width: 20px;
     height: 20px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
+    .footer {
+        padding: 0 80px;
+    }
+}
+@media screen and (max-width: 840px) {
+    .footer {
+        padding: 0 60px;
+    }
+    .footer__links {
+        margin-right: 20px;
+    }
+    .footer__social-icons {
+        margin-left: 30px;
+    }
+}
+@media screen and (max-width: 785px) {
     .footer {
         padding: 0 40px;
         min-height: 64px;
@@ -55,7 +71,13 @@
         margin-left: 26px;
     }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 720px) {
+    .footer {
+        padding: 0 20px;
+        min-height: 64px;
+    }
+}
+@media screen and (max-width: 680px) {
     .footer {
         flex-direction: column;
         padding: 0 16px;
@@ -66,8 +88,8 @@
         margin: 0 auto 20px;
     }
     .footer__navigation-container {
-        margin: 20px auto 0;
-        width: 288px;
+        margin: 20px 20px 0;
+        width: 600px;
         justify-content: space-between;
     }
     .footer__links-container {
@@ -79,5 +101,26 @@
     }
     .footer__social-icons {
         margin-left: 28px;
+    }
+}
+@media screen and (max-width: 630px) {
+    .footer__navigation-container {
+        width: 500px;
+    }
+}
+@media screen and (max-width: 530px) {
+    .footer__navigation-container {
+        width: 400px;
+    }
+}
+@media screen and (max-width: 430px) {
+    .footer__navigation-container {
+        width: 300px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .footer__navigation-container {
+        margin: 20px auto 0;
+        width: 288px;
     }
 }
