--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -40,7 +40,7 @@
 @media screen and (max-width: 768px) {
     .main__background {
         top: -106px;
-        max-height: 400px;
+        max-height: 402px;
     }
     .search {
         max-width: 448px;
@@ -55,6 +55,20 @@
         margin: 16px auto 0 0;
     }
 }
+@media screen and (max-width: 475px) {
+    .search__heading {
+       margin-left: 15px;
+    }
+    .search__description {
+        margin: 16px 15px 0;
+    }
+}
+@media screen and (max-width: 415px) {
+    .main__background {
+        top: -96px;
+        max-height: 538px;
+    }
+}
 @media screen and (max-width: 320px) {
     .main__background {
         top: -86px;
@@ -63,5 +77,11 @@
     .search {
         max-width: 288px;
         margin: 30px auto 32px;
+    }
+    .search__heading {
+        margin: 0;
+    }
+    .search__description {
+        margin: 16px auto 0 0;
     }
 }
