--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -47,14 +47,19 @@
 @media screen and (max-width: 768px) {
     .search-form {
         min-height: 56px;
-        margin: 48px 0 0 0;
+        margin: 48px 0 0;
+    }
+}
+@media screen and (max-width: 475px) {
+    .search-form {
+        margin: 48px 15px 0;
     }
 }
 @media screen and (max-width: 320px) {
     .search-form {
         flex-direction: column;
         background-color: transparent;
-        margin: 122px 0 0 0;
+        margin: 122px 0 0;
         border-radius: 0;
     }
     .search-form__input {
