--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -30,12 +30,22 @@
 .header__burger-menu-button:hover {
     cursor: pointer;
 }
+@media screen and (max-width: 1000px) {
+    .header {
+        padding: 0 80px 0;
+    }
+}
+@media screen and (max-width: 850px) {
+    .header {
+        padding: 0 60px 0;
+    }
+}
 @media screen and (max-width: 768px) {
     .header {
         padding: 0 40px 0;
     }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 630px) {
     .header {
         min-height: 56px;
         padding: 0 16px 0;
