--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -55,22 +55,27 @@
         margin: 48px 15px 0;
     }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 450px) {
     .search-form {
         flex-direction: column;
         background-color: transparent;
-        margin: 122px 0 0;
         border-radius: 0;
     }
     .search-form__input {
         border-radius: 100px;
         min-height: 56px;
-        width: 270px;
+        width: initial;
         margin: 0;
         padding-left: 16px;
+        padding-right: 16px;
     }
     .search-form__search-button {
         min-height: 56px;
         margin-top: 16px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .search-form {
+        margin: 122px 0 0;
     }
 }
