--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -3,6 +3,7 @@
     overflow: hidden;
     border-radius: 20px;
     background-color: #FFFFFF;
+    padding-bottom: 24px;
 }
 .news-card__image {
     min-width: 100%;
@@ -122,7 +123,7 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 22px;
-    margin: 16px 0 0;
+    margin: 16px 0 10px;
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
@@ -138,7 +139,12 @@
     letter-spacing: 0.4px;
     text-transform: uppercase;
     color: #B6BCBF;
-    margin: 10px 24px 24px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0 24px;
 }
 @media screen and (max-width: 990px) {
     .news-card__image {
@@ -155,11 +161,14 @@
     }
 }
 @media screen and (max-width: 868px) {
+    .news-card__container {
+        padding-bottom: 16px;
+    }
     .news-card__image {
         height: 150px;        
     }
     .news-card__sourse {
-        margin: 12px 16px 16px;
+        margin: 0 16px;
     }
     .news-card__button-container {
         top: 8px;
@@ -190,7 +199,7 @@
         -webkit-line-clamp: 3;      
     }
     .news-card__description {
-        margin: 10px 0 0; 
+        margin: 10px 0 10px; 
         -webkit-line-clamp: 4;       
     }
 }
@@ -227,7 +236,8 @@
         font-size: 22px;
         line-height: 26px;       
     }
-    .news-card__sourse {
-        margin: 8px 16px 16px;
+    .news-card__description {
+        margin: 10px 0 8px; 
+        -webkit-line-clamp: 4;       
     }
 }
