--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -69,6 +69,9 @@
 .news-card__button_trash:hover {
     background-image: url(../../images/svg/trash-button-black.svg);
 }
+.news-card__button_saved {
+    background-image: url(../../images/svg/saved-icon.svg);
+}
 .news-card__keyword-container {
     display: flex;
     position: absolute;
