--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -109,11 +109,13 @@
 }
 .popup-with-form__input_error {
     color: #FF0000;
-    margin: 3px auto 13px 0;
-    height: 14px;
-}
-.popup-with-form__input_error:last-of-type {
-    margin-bottom: 0;
+    margin: 3px auto 0 0;
+    height: 28px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .popup-with-form__change-form {
     font-size: 14px;
