--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,6 +1,6 @@
 .search-form {
     display: flex;
-    overflow: hidden;
+    position: relative;
     font-family: 'Roboto', Arial, sans-serif;
     min-height: 64px;
     border-radius: 100px;
@@ -14,7 +14,7 @@
     font-size: 16px;
     line-height: 22px;
     color: #1A1B22;
-    margin: 0 24px;
+    margin: 2px 24px;
     width: 100%;
 }
 .search-form__input::placeholder {
@@ -22,6 +22,12 @@
 }
 .search-form__input:focus {
     outline: none;
+}
+.search-form__input_error {
+    position: absolute;
+    height: 14px;
+    color: #FF0000;
+    margin: -22px auto 0 24px;
 }
 .search-form__search-button {
     border: none;
